--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,12 @@ Package: RDML
 Type: Package
 Title: Importing qPCR data from RDML format files
 Version: 0.4
+LazyData: true
 Date: 2014-09-05
-Author: Konstantin A. Blagodatskikh <k.blag@yandex.ru>
+Author: Konstantin A. Blagodatskikh <k.blag@yandex.ru>, Stefan Roediger <stefan.roediger@hs-lausitz.de>
 Maintainer: Konstantin A. Blagodatskikh <k.blag@yandex.ru>
-Description: Imports qPCR data from RDML format files and transforms to the appropriate format of the 'qpcR' package.
+Description: Imports qPCR data from RDML format files and transforms to the appropriate format of the 'qpcR' or 'chipPCR' package.
 License: GPL (>= 2)
+URL: https://github.com/kablag/RDML
 Depends: XML (>= 3.98-1.1)
-Suggests: qpcR, chipPCR
+Suggests: qpcR (>= 1.3-9), chipPCR (>= 0.0.8-1)
