--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: RDML
 Type: Package
 Title: Importing real-time thermo cycler (qPCR) data from RDML format files
-Version: 0.4-2
+Version: 0.4-3
 LazyData: true
 Date: 2014-09-10
 Maintainer: Konstantin A. Blagodatskikh <k.blag@yandex.ru>
-Description: Imports real-time thermo cycler (qPCR) data from RDML format files and transforms to the appropriate formats of the 'qpcR' and 'chipPCR' packages.
+Description: Imports real-time thermo cycler (qPCR) data from Real-time PCR Data Markup Language (RDML) format files and transforms to the appropriate formats of the 'qpcR' and 'chipPCR' packages.
 Authors@R: c(
     person("Konstantin A.", "Blagodatskikh", 
       email = "k.blag@yandex.ru", role = c("cre", "aut")),
