--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,5 +16,5 @@ Authors@R: c(
 License: GPL (>= 2)
 URL: https://github.com/kablag/RDML
 Depends: XML (>= 3.98-1.1)
-Imports: chipPCR (>= 0.0.8-1)
+Imports: chipPCR (>= 0.0.8-1), MBmca, shiny
 Suggests: qpcR (>= 1.3-9)
