--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,6 @@ importFrom(MBmca, diffQ2)
 importMethodsFrom(chipPCR, summary)
 importFrom(shiny, runApp)
 importFrom(XML, getNodeSet, xmlGetAttr, xmlParse, xmlValue, xpathSApply)
+importFrom(digest, digest)
+importFrom(stringr, str_extract)
+importFrom(gplots, heatmap.2)
