rewrite with R6 stage 2. Code for RDML core is MUCH shorter. Works 3-4 times faster!!!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ selectFData,
 RDML_gui
 )
 
+import(R6)
 importFrom(chipPCR, MFIaggr)
 importFrom(MBmca, diffQ2)
 importMethodsFrom(chipPCR, summary)
