Core RDML seems to be working now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ importFrom(dpcR,extract_dpcr)
 importFrom(dpcR,plot_panel)
 importFrom(shiny,runApp)
 importFrom(stringr,str_extract)
+importFrom(uuid,UUIDgenerate)
 importMethodsFrom(chipPCR,summary)
