--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,14 +18,15 @@ Authors@R: c(
 License: GPL (>= 2)
 URL: https://github.com/kablag/RDML
 Depends:
-    XML (>= 3.98-1.1)
+    XML (>= 3.98-1.1),
+    R6,
+    uuid
 Imports:
     chipPCR (>= 0.0.8-1),
     MBmca,
     shiny,
     digest,
     stringr,
-    dpcR,
-    R6
+    dpcR
 Suggests:
     qpcR (>= 1.3-9)
