--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(RDML)
 export(RDML_gui)
 export(plot.RDML_object)
 export(selectFData)
+export(summary.RDML)
 importFrom(MBmca,diffQ2)
 importFrom(R6,R6Class)
 importFrom(XML,getNodeSet)
