--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 S3method(names,RDML)
 export(RDML)
 export(RDML_gui)
-export(plot.RDML_object)
+export(plot.RDML)
 export(selectFData)
 export(summary.RDML)
 importFrom(MBmca,diffQ2)
