--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,3 +30,11 @@ Imports:
     dpcR
 Suggests:
     qpcR (>= 1.3-9)
+Collate:
+    'summary.RDML.R'
+    'plot.RDML.R'
+    'RDML.inner.logic.R'
+    'RDML.R'
+    'RDML.gui.R'
+    'names.RDML.R'
+    'selectFData.R'
