--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,10 +27,12 @@ Imports:
     shiny,
     digest,
     stringr,
-    dpcR
+    dpcR,
+    assertthat
 Suggests:
     qpcR (>= 1.3-9)
 Collate:
+    'RDML.asserts.R'
     'RDML.R'
     'RDML.GetFData.R'
     'RDML.Save.RDML.R'
