--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ importFrom(digest,digest)
 importFrom(dpcR,create_dpcr)
 importFrom(dpcR,extract_dpcr)
 importFrom(dpcR,plot_panel)
+importFrom(pipeR,"%>>%")
+importFrom(plyr,ddply)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
 importFrom(shiny,runApp)
