--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,26 +2,16 @@
 
 S3method(names,RDML)
 export(RDML)
-export(RDML.gui)
-export(plot.RDML)
-export(summary.RDML)
-import(assertthat)
-importFrom(MBmca,diffQ2)
 importFrom(R6,R6Class)
 importFrom(XML,getNodeSet)
 importFrom(XML,xmlGetAttr)
 importFrom(XML,xmlParse)
 importFrom(XML,xmlValue)
 importFrom(XML,xpathSApply)
-importFrom(chipPCR,MFIaggr)
-importFrom(digest,digest)
-importFrom(dpcR,create_dpcr)
-importFrom(dpcR,extract_dpcr)
-importFrom(dpcR,plot_panel)
+importFrom(assertthat,assert_that)
+importFrom(assertthat,on_failure)
+importFrom(plyr,compact)
 importFrom(plyr,ddply)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
-importFrom(shiny,runApp)
-importFrom(stringr,str_extract)
 importFrom(uuid,UUIDgenerate)
-importMethodsFrom(chipPCR,summary)
