--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,27 +17,19 @@ Authors@R: c(
     email = "michalburdukiewicz@gmail.com", role = "aut"))
 License: GPL (>= 2)
 URL: https://github.com/kablag/RDML
-Depends:
-    XML (>= 3.98-1.1),
-    R6,
-    uuid
 Imports:
+    R6,
+    assertthat,
     chipPCR (>= 0.0.8-1),
     MBmca,
     shiny,
     digest,
     stringr,
-    dpcR,
-    assertthat
-Suggests:
-    qpcR (>= 1.3-9)
+    dpcR
 Collate:
     'RDML.asserts.R'
     'RDML.R'
+    'RDML.AsTable.R'
     'RDML.GetFData.R'
-    'RDML.Save.RDML.R'
-    'RDML.gui.R'
     'RDML.init.R'
     'names.RDML.R'
-    'plot.RDML.R'
-    'summary.RDML.R'
