--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,9 @@
 
 S3method(names,RDML)
 export(RDML)
+import(XML)
+import(assertthat)
 importFrom(R6,R6Class)
-importFrom(XML,getNodeSet)
-importFrom(XML,xmlGetAttr)
-importFrom(XML,xmlParse)
-importFrom(XML,xmlValue)
-importFrom(XML,xpathSApply)
-importFrom(assertthat,assert_that)
-importFrom(assertthat,on_failure)
 importFrom(plyr,compact)
 importFrom(plyr,ddply)
 importFrom(plyr,ldply)
