--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(RDML)
 import(XML)
 import(assertthat)
 importFrom(R6,R6Class)
+importFrom(dplyr,filter)
 importFrom(plyr,compact)
 importFrom(plyr,ddply)
 importFrom(plyr,ldply)
