--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ S3method(names,RDML)
 export(RDML)
 import(XML)
 import(assertthat)
+import(dplyr)
 importFrom(R6,R6Class)
-importFrom(dplyr,filter)
 importFrom(plyr,compact)
 importFrom(plyr,ddply)
 importFrom(plyr,ldply)
