--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,9 @@ License: GPL (>= 2)
 URL: https://github.com/kablag/RDML
 Imports:
     R6,
-    dpcR,
     assertthat,
     XML,
+    uuid,
     plyr,
     dplyr
 Collate:
