--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RDML
 Type: Package
-Title: Importing Real-Time Thermo Cycler (qPCR) Data From RDML Format Files
+Title: Importing Real-Time Thermo Cycler (qPCR) Data from RDML Format Files
 Version: 0.8-2
 LazyData: true
 Date: 2015-04-02
