--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,8 @@ Authors@R: c(
     email = "michalburdukiewicz@gmail.com", role = "aut"))
 License: GPL (>= 2)
 URL: https://github.com/kablag/RDML
+Depends:
+    R (> 3.0.3)
 Imports:
     R6 (>= 2.0.1),
     assertthat (>= 0.1),
