Clone method added

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,8 +31,9 @@ Collate:
     'RDML.R'
     'RDML.AsDendrogram.R'
     'RDML.AsTable.R'
-    'RDML.GetFData.R'
     'RDML.Merge.R'
+    'RDML.Clone.R'
+    'RDML.GetFData.R'
     'RDML.SetFData.R'
     'RDML.init.R'
     'names.RDML.R'
