--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ import(dplyr)
 importFrom(R6,R6Class)
 importFrom(plyr,compact)
 importFrom(plyr,ddply)
+importFrom(plyr,laply)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
