--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,6 @@ S3method(names,RDML)
 export(RDML)
 import(XML)
 import(assertthat)
+import(plyr)
 import(dplyr)
-importFrom(R6,R6Class)
-importFrom(plyr,compact)
-importFrom(plyr,ddply)
-importFrom(plyr,laply)
-importFrom(plyr,ldply)
-importFrom(plyr,llply)
+importFrom(R6, R6Class)
