--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,15 @@
 
 S3method(names,RDML)
 export(RDML)
+export(idType)
+export(rdmlIdType)
 import(XML)
 import(assertthat)
-import(plyr)
 import(dplyr)
-importFrom(R6, R6Class)
+import(rlist)
+importFrom(R6,R6Class)
+importFrom(plyr,compact)
+importFrom(plyr,ddply)
+importFrom(plyr,laply)
+importFrom(plyr,ldply)
+importFrom(plyr,llply)
