--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ import(assertthat)
 import(dplyr)
 import(rlist)
 importFrom(R6,R6Class)
+importFrom(plyr,.)
 importFrom(plyr,compact)
 importFrom(plyr,ddply)
 importFrom(plyr,laply)
