--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports:
     assertthat (>= 0.1),
     XML (>= 3.98-1.1),
     plyr (>= 1.8.1),
-    dplyr (>= 0.4.1)
+    dplyr (>= 0.4.1),
+    rlist (>= 0.4)
 Collate:
     'RDML.types.R'
     'RDML.asserts.R'
