--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,44 @@ S3method(names,RDML)
 export(MergeRDMLs)
 export(RDML)
 export(adpsType)
+export(annotationType)
+export(cdnaSynthesisMethodType)
+export(commercialAssayType)
+export(cqDetectionMethodType)
+export(dataCollectionSoftwareType)
+export(dataType)
+export(documentationType)
+export(dyeType)
+export(experimentType)
+export(experimenterType)
+export(gradientType)
 export(idReferencesType)
 export(idType)
+export(labelFormatType)
+export(lidOpenType)
+export(loopType)
 export(mdpsType)
+export(nucleotideType)
+export(oligoType)
+export(pauseType)
+export(pcrFormatType)
+export(primingMethodType)
+export(quantityType)
+export(quantityUnitType)
 export(rdmlIdType)
 export(reactIdType)
+export(reactType)
+export(runType)
+export(sampleType)
+export(sampleTypeType)
+export(sequencesType)
+export(stepType)
+export(targetType)
+export(targetTypeType)
+export(temperatureType)
+export(templateQuantityType)
+export(thermalCyclingConditionsType)
+export(xRefType)
 import(XML)
 import(assertthat)
 import(dplyr)
