--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(labelFormatType)
 export(lidOpenType)
 export(loopType)
 export(mdpsType)
+export(measureType)
 export(nucleotideType)
 export(oligoType)
 export(pauseType)
