--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,16 +18,16 @@ Authors@R: c(
     email = "michalburdukiewicz@gmail.com", role = "aut"))
 License: GPL (>= 2)
 URL: https://github.com/kablag/RDML
-Depends: 
+Depends:
     R (> 3.0.3)
-Imports: 
+Imports:
     R6 (>= 2.0.1),
     assertthat (>= 0.1),
     XML (>= 3.98-1.1),
     plyr (>= 1.8.1),
     dplyr (>= 0.4.1),
     rlist (>= 0.4)
-Collate: 
+Collate:
     'RDML.types.R'
     'RDML.asserts.R'
     'RDML.R'
@@ -37,6 +37,8 @@ Collate:
     'RDML.Merge.R'
     'RDML.SetFData.R'
     'RDML.init.R'
+    'functional_wrappers.R'
     'names.RDML.R'
-Suggests: knitr
+Suggests:
+    knitr
 VignetteBuilder: knitr
