--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,5 +43,8 @@ Suggests:
     chipPCR,
     ggplot2,
     knitr,
-    MBmca
+    MBmca,
+    rhandsontable,
+    shiny,
+    shinythemes
 VignetteBuilder: knitr
