--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,7 +47,7 @@ export(templateQuantityType)
 export(thermalCyclingConditionsType)
 export(xRefType)
 import(XML)
-import(assertthat)
+import(checkmate)
 import(dplyr)
 import(rlist)
 importFrom(R6,R6Class)
