--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,4 +58,8 @@ importFrom(plyr,ddply)
 importFrom(plyr,laply)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
+importFrom(readxl,read_excel)
+importFrom(tidyr,gather)
 importFrom(tidyr,spread)
+importFrom(tidyr,unite)
+importFrom(tools,file_ext)
