--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(plyr,laply)
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
 importFrom(readxl,read_excel)
+importFrom(stringr,str_match_all)
 importFrom(tidyr,gather)
 importFrom(tidyr,spread)
 importFrom(tidyr,unite)
