--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,10 +46,11 @@ export(temperatureType)
 export(templateQuantityType)
 export(thermalCyclingConditionsType)
 export(xRefType)
-import(XML)
 import(checkmate)
 import(dplyr)
+import(pipeR)
 import(rlist)
+import(xml2)
 importFrom(R6,R6Class)
 importFrom(plyr,.)
 importFrom(plyr,alply)
