--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,8 +50,8 @@ import(checkmate)
 import(data.table)
 import(pipeR)
 import(rlist)
+import(stringr)
 import(xml2)
 importFrom(R6,R6Class)
 importFrom(readxl,read_excel)
-importFrom(stringr,str_match_all)
 importFrom(tools,file_ext)
