--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(pcrFormatType)
 export(primingMethodType)
 export(quantityType)
 export(quantityUnitType)
+export(rdmlEdit)
 export(rdmlIdType)
 export(reactIdType)
 export(reactType)
