--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,5 +54,7 @@ import(rlist)
 import(stringr)
 import(xml2)
 importFrom(R6,R6Class)
+importFrom(lubridate,ymd)
+importFrom(lubridate,ymd_hms)
 importFrom(readxl,read_excel)
 importFrom(tools,file_ext)
