--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Imports:
     R6 (>= 2.0.1),
     stringr,
     tools (>= 3.2),
-    xml2 (>= 1.0)
+    xml2 (>= 1.0),
+    lubridate (>= 1.6.0)
 Collate:
     'RDML.types.R'
     'RDML.R'
