--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: RDML
 Type: Package
 Title: Importing Real-Time Thermo Cycler (qPCR) Data from RDML Format Files
-Version: 0.9-4
+Version: 0.9-5
 LazyData: true
-Date: 2016-10-20
+Date: 2016-12-08
 Description: Imports real-time thermo cycler (qPCR) data from Real-time PCR
     Data Markup Language (RDML) format files and transforms to the appropriate
     formats of the 'qpcR' and 'chipPCR' packages. Contains a dendrogram
-    visualization for the structure of RDML object.
+    visualization for the structure of RDML object and GUI for RDML editing.
 Authors@R: c(
     person("Konstantin A.", "Blagodatskikh",
     email = "k.blag@yandex.ru", role = c("cre", "aut")),
