--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: RDML
 Type: Package
 Title: Importing Real-Time Thermo Cycler (qPCR) Data from RDML Format Files
-Version: 0.9-5
+Version: 0.9-6
 LazyData: true
-Date: 2016-12-08
+Date: 2017-04-24
 Description: Imports real-time thermo cycler (qPCR) data from Real-time PCR
-    Data Markup Language (RDML) format files and transforms to the appropriate
-    formats of the 'qpcR' and 'chipPCR' packages. Contains a dendrogram
-    visualization for the structure of RDML object and GUI for RDML editing.
+    Data Markup Language (RDML) or devices native format files and transforms
+    to the appropriate formats of the 'qpcR' and 'chipPCR' packages. Contains
+    a dendrogram visualization for the structure of RDML object and GUI for 
+    RDML editing.
 Authors@R: c(
     person("Konstantin A.", "Blagodatskikh",
     email = "k.blag@yandex.ru", role = c("cre", "aut")),
