--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Authors@R: c(
     email = "michalburdukiewicz@gmail.com", role = "aut"),
     person("Andrej-Nikolai", "Spiess",
     email = "a.spiess@uke.de", role = "aut"))
-License: MIT
+License: MIT + file LICENSE
 URL: https://github.com/kablag/RDML
 Depends:
     R (>= 3.2.0)
