--- a/.travis.yml
+++ b/.travis.yml
@@ -4,16 +4,14 @@
 # see the wiki:
 #   https://github.com/craigcitro/r-travis/wiki
 
-sudo: required
-
 language: r
+os: linux
+dist: bionic
 
-matrix:
+jobs:
   include:
 
-  - os: linux
-    dist: bionic
-    r: release
+  - r: release
     cran: https://cran.rstudio.com/
     addons:
       apt:
@@ -22,9 +20,7 @@ matrix:
     before_install:
     - tlmgr install xcolor
     
-  - os: linux
-    dist: bionic
-    r: devel
+  - r: devel
     addons:
       apt:
         packages:
