--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ jobs:
     addons:
       apt:
         packages:
-          - libgdal1-dev
+          - libgdal-dev
     before_install:
     - tlmgr install xcolor
     
@@ -24,7 +24,7 @@ jobs:
     addons:
       apt:
         packages:
-          - libgdal1-dev
+          - libgdal-dev
     before_install:
     - tlmgr install xcolor
     
